# serializer version: 1
# name: test_detector[IncorrectSolc-0.6.11-dynamic_1.sol]
  list([
    list([
      dict({
        'check': 'solc-version',
        'confidence': 'High',
        'description': '''
          Pragma version^0.6.10 (tests/detectors/solc-version/0.6.11/dynamic_1.sol#1) allows old versions
  
        ''',
        'elements': list([
          dict({
            'name': '^0.6.10',
            'source_mapping': dict({
              'ending_column': 25,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/solc-version/0.6.11/dynamic_1.sol',
              'filename_short': 'tests/detectors/solc-version/0.6.11/dynamic_1.sol',
              'is_dependency': False,
              'length': 24,
              'lines': list([
                1,
              ]),
              'start': 0,
              'starting_column': 1,
            }),
            'type': 'pragma',
            'type_specific_fields': dict({
              'directive': list([
                'solidity',
                '^',
                '0.6',
                '.10',
              ]),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/solc-version/0.6.11/dynamic_1.sol#L1',
        'id': 'ba2de3955a664b3846697e1ad89d5eb477b9992d67d86bf5ac36b904a8ccca4b',
        'impact': 'Informational',
        'markdown': '''
          Pragma version[^0.6.10](tests/detectors/solc-version/0.6.11/dynamic_1.sol#L1) allows old versions
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[IncorrectSolc-0.6.11-dynamic_2.sol]
  list([
    list([
      dict({
        'check': 'solc-version',
        'confidence': 'High',
        'description': '''
          Pragma version>=0.6.0<0.7.0 (tests/detectors/solc-version/0.6.11/dynamic_2.sol#1) allows old versions
  
        ''',
        'elements': list([
          dict({
            'name': '>=0.6.0<0.7.0',
            'source_mapping': dict({
              'ending_column': 32,
              'filename_absolute': '/GENERIC_PATH',
              'filename_relative': 'tests/detectors/solc-version/0.6.11/dynamic_2.sol',
              'filename_short': 'tests/detectors/solc-version/0.6.11/dynamic_2.sol',
              'is_dependency': False,
              'length': 31,
              'lines': list([
                1,
              ]),
              'start': 0,
              'starting_column': 1,
            }),
            'type': 'pragma',
            'type_specific_fields': dict({
              'directive': list([
                'solidity',
                '>=',
                '0.6',
                '.0',
                '<',
                '0.7',
                '.0',
              ]),
            }),
          }),
        ]),
        'first_markdown_element': 'tests/detectors/solc-version/0.6.11/dynamic_2.sol#L1',
        'id': '8c08bc3809d977ad0253b208683307501206a69d53c84f78e68fad3ae144117c',
        'impact': 'Informational',
        'markdown': '''
          Pragma version[>=0.6.0<0.7.0](tests/detectors/solc-version/0.6.11/dynamic_2.sol#L1) allows old versions
  
        ''',
      }),
    ]),
  ])
# ---
# name: test_detector[IncorrectSolc-0.6.11-static.sol]
  list([
    list([
    ]),
  ])
# ---
